# nori-rendering

./: .editorconfig  .gitignore  CMakeLists.sync-conflict-20241111-105259-WBQ2MUJ.txt  CMakeLists.txt
assignments/bsdfs/: conductor.cpp  dielectric.cpp  diffuse.cpp  mirror.cpp  phong.cpp
assignments/camera/: perspective.cpp
assignments/emitters/: area.cpp  envmap.cpp  point.cpp
assignments/integrators/: bsdfpath.cpp  depth.cpp  direct.cpp  midirect.cpp  mipath.cpp  normal.cpp  photonmapper.cpp  simplepath.cpp
assignments/mlt/: pssmlt.cpp
assignments/sampler/: halton.cpp  halton_decorr.cpp  independent.cpp
assignments/util/: mesh.cpp  warp.cpp
include/nori/: block.h  bsdf.h  bvh.h  bvh_.h  camera.h  common.h  emcadataapi.h  emitter.h  integrator.h  kdtree.h  mesh.h  mlt.h  object.h  photon.h  ray.h  rendermanager.h  sampler.h  scene.h  texture.h  warp.h
scenes/ex01/bunny/: bunny-normal.xml
scenes/ex01/bunny/ref/: bunny-normal-512spp-ref.exr
scenes/ex01/cbox/: cbox-depth.exr  cbox-depth.xml  cbox-normal.xml  cbox-pl-direct-emca.exr  cbox-pl-direct-emca.xml  cbox-pl-direct.exr  cbox-pl-direct.xml
scenes/ex01/cbox/ref/: cbox-depth-512spp-ref.exr  cbox-normal-512spp-ref.exr  cbox-pl-direct-512spp-ref.exr
scenes/ex01/sponza/: sponza-direct.xml  sponza-textured-direct.xml  sponza-textured-vpl-direct.xml
scenes/ex01/sponza/ref/: sponza-direct-512spp-ref.exr
scenes/ex01/sponza/textures/: bricks.exr
scenes/ex03/cbox/: cbox-direct.exr  cbox-direct.xml  cbox-path-emca.exr  cbox-path-emca.xml  cbox-path.exr  cbox-path.xml  cbox-path2.exr  cbox-path2.xml
scenes/ex03/cbox/ref/: cbox-direct-512spp-ref.exr  cbox-direct-ref.exr  cbox-path-512spp-ref.exr  cbox-path-ref.exr
scenes/ex03/sibenik/: sibenik-path-dof.xml  sibenik-path.exr  sibenik-path.xml
scenes/ex03/sibenik/ref/: sibenik-path-512spp-ref.exr  sibenik-path-dof-512spp-ref.exr
scenes/ex03/sibenik/textures/: KAMEN-stup.exr  kamen.exr  marmor6x6.exr
scenes/ex04/cbox/: cbox-path-halton-decorr.xml  cbox-path-halton.xml  cbox-path.xml
scenes/ex04/cbox/ref/: cbox-path-512spp-ref.exr  cbox-path-halton-512spp-ref.exr  cbox-path-halton-decorr-512spp-ref.exr
scenes/ex05/dragon/: dragon-bsdfpath-3-60.exr  dragon-bsdfpath-3-60.xml  dragon-bsdfpath-60-60.exr  dragon-bsdfpath-60-60.xml  dragon-bsdfpath-emca.exr  dragon-bsdfpath-emca.xml  dragon-bsdfpath.exr  dragon-bsdfpath.xml  dragon-path.xml
scenes/ex05/dragon/ref/: dragon-60-ref.exr  dragon-bsdfpath-512spp-ref.exr  dragon-ref.exr
scenes/ex05/dragon/textures/: stpeters_cross_clamped.exr
scenes/ex05/ingots/: ingots-bsdfpath.exr  ingots-bsdfpath.xml  ingots-conductors-bsdfpath.exr  ingots-conductors-bsdfpath.xml  ingots-dielectrics-bsdfpath.exr  ingots-dielectrics-bsdfpath.xml
scenes/ex05/ingots/ref/: ingots-bsdfpath-512spp-ref.exr  ingots-conductors-bsdfpath-512spp-ref.exr  ingots-conductors-ref.exr  ingots-dielectrics-bsdfpath-512spp-ref.exr  ingots-dielectrics-ref.exr  ingots-ref.exr
scenes/ex06/veach_mi/: cbox.xml  dragon.xml  sibenik.xml  sponza.xml  veach_mi-bsdf.xml  veach_mi-direct.xml  veach_mi-midirect.xml  veach_mi-mipath.xml
scenes/ex07/cbox/: cbox-pmap.xml
scenes/ex07/clocks/: clocks-pmap.xml
scenes/ex08/cbox/: cbox-path-mlt.xml
scenes/ex08/cbox/ref/: cbox-ref.exr
scenes/ex08/mcmc_tests/: empty_scene.xml
scenes/ex08/pool/: pool-mipath-mlt.exr  pool-mipath-mlt.xml
scenes/ex08/pool/ref/: pool-mipath-mlt-512spp-ref.exr
scenes/ex09/envmap/: envmap-diffuse-bsdfpath.xml  envmap-diffuse-direct.xml  envmap-diffuse-mipath.xml  envmap-mirror-bsdfpath.xml
scenes/ex09/envmap/ref/: envmap-diffuse-ref.exr  envmap-mirror-ref.exr
scenes/ex10/microfacets/: microfacets-bsdfpath.xml  microfacets-dielectric-bsdfpath.xml  microfacets-dielectric-mipath.xml  microfacets-mipath.xml
scenes/ex10/teapots/: teapots-mipath.xml  teapots-smooth-mipath.xml
scenes/ex11/cbox/: cbox-glossy-bsdfpath.xml  cbox-glossy-path.xml  cbox-glossy-repath.xml
scenes/ex11/spheres/: spheres-direct.xml  spheres-midirect.xml  spheres-redirect.xml
src/: bitmap.cpp  bitmaptexture.cpp  block.cpp  blockwise.cpp  bvh.cpp  bvh_.cpp  checkerboard.cpp  common.cpp  emca.cpp  main.cpp  main.sync-conflict-20241111-105252-WBQ2MUJ.cpp  mltrendermanager.cpp  parser.cpp  photon.cpp  progressive.cpp  scene.cpp  warptest.cpp
(+9 files in other folders)
